# onelo

./: CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  build.rs
docs/architecture/: README.md  data_model.erd
src/: artefact.rs  cache.rs  checksum.rs  content.rs  content_type.rs  context.rs  filesystem.rs  lib.rs  main.rs  source.rs  source_entry.rs
src/cli/: build.rs
src/files/: mod.rs
src/sourcing/filesystem/: mod.rs
src/sql/: bootstrap.sql
test/files/: 01.md
test/files/subdir/: a.md  b.txt
