[package]
name = "onelo"
version = "0.1.0"
authors = ["Israel Fenor <israelfenor@protonmail.com>", "Arnau Siches <asiches@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A knowledge graph sketch"
readme = "README.md"
keywords = ["cli", "knowledge_graph"]

[[bin]]
name = "onelo"
path = "src/main.rs"
bench = false

[lib]
name = "onelo_backend"
path = "src/lib.rs"


[dependencies]
chrono = "0.4"
clap = "=3.0.0-beta.2"
regex = "1"
rusqlite = { version = "0.24", features = ["bundled", "functions", "limits", "load_extension"] }
